--- a/app/code/MW/FreeGift/view/adminhtml/layout/mw_freegift_promo_catalog_edit.xml
+++ b/app/code/MW/FreeGift/view/adminhtml/layout/mw_freegift_promo_catalog_edit.xml
@@ -32,6 +32,23 @@
 
         <referenceContainer name="content">
             <referenceBlock name="mw_freegift_catalog_rule_form">
+
+                <!--<block class="MW\FreeGift\Block\Adminhtml\Promo\Catalog\Edit\Tab\View" name="customer_edit_tab_view111" template="tab/view.phtml">-->
+                    <!--<arguments>-->
+                        <!--<argument name="tab_label" xsi:type="string" translate="true">Customer View</argument>-->
+                        <!--<argument name="sort_order" xsi:type="number">10</argument>-->
+                        <!--<argument name="config" xsi:type="array">-->
+                            <!--<item name="label" xsi:type="string" translate="true">Customer View</item>-->
+                            <!--<item name="collapsible" xsi:type="boolean">true</item>-->
+                            <!--<item name="opened" xsi:type="boolean">false</item>-->
+                            <!--<item name="sortOrder" xsi:type="number">20</item>-->
+                            <!--<item name="canShow" xsi:type="boolean">true</item>-->
+                            <!--<item name="componentType" xsi:type="string">fieldset</item>-->
+                        <!--</argument>-->
+                    <!--</arguments>-->
+                    <!--<block class="MW\FreeGift\Block\Adminhtml\Promo\Catalog\Edit\Tab\View\PersonalInfo" name="personal_info11" template="tab/view/personal_info.phtml"/>-->
+                <!--</block>-->
+
                 <block class="MW\FreeGift\Block\Adminhtml\Promo\Catalog\Edit\Tab\Conditions" name="promo_catalog_edit_tab_conditions">
                     <arguments>
                         <argument name="config" xsi:type="array">
@@ -45,18 +62,18 @@
                     </arguments>
                 </block>
 
-                <block class="MW\FreeGift\Block\Adminhtml\Promo\Catalog\Edit\Tab\Main" name="promo_catalog_edit_tab_gift">
-                    <arguments>
-                        <argument name="config" xsi:type="array">
-                            <item name="label" xsi:type="string" translate="true">Gift Items</item>
-                            <item name="collapsible" xsi:type="boolean">true</item>
-                            <item name="opened" xsi:type="boolean">false</item>
-                            <item name="sortOrder" xsi:type="number">40</item>
-                            <item name="canShow" xsi:type="boolean">true</item>
-                            <item name="componentType" xsi:type="string">fieldset</item>
-                        </argument>
-                    </arguments>
-                </block>
+                <!--<block class="MW\FreeGift\Block\Adminhtml\Promo\Catalog\Edit\Tab\Main" name="promo_catalog_edit_tab_gift">-->
+                    <!--<arguments>-->
+                        <!--<argument name="config" xsi:type="array">-->
+                            <!--<item name="label" xsi:type="string" translate="true">Gift Items</item>-->
+                            <!--<item name="collapsible" xsi:type="boolean">true</item>-->
+                            <!--<item name="opened" xsi:type="boolean">false</item>-->
+                            <!--<item name="sortOrder" xsi:type="number">40</item>-->
+                            <!--<item name="canShow" xsi:type="boolean">true</item>-->
+                            <!--<item name="componentType" xsi:type="string">fieldset</item>-->
+                        <!--</argument>-->
+                    <!--</arguments>-->
+                <!--</block>-->
             </referenceBlock>
 
             <uiComponent name="mw_freegift_catalog_rule_form"/>
