--- a/app/code/MW/FreeGift/view/adminhtml/templates/tab/view.phtml
+++ b/app/code/MW/FreeGift/view/adminhtml/templates/tab/view.phtml
@@ -1,12 +1,6 @@
 <?php
 /**
- * Copyright © 2013-2017 Magento, Inc. All rights reserved.
- * See COPYING.txt for license details.
+ * Template for block \MW\FreeGift\Block\Adminhtml\Promo\Catalog\Edit\Tab\GiftTab
  */
-
-/**
- * Template for block \Magento\Customer\Block\Adminhtml\Edit\Tab\View
- */
-
-/** @var $block \Magento\Customer\Block\Adminhtml\Edit\Tab\View */
+/** @var $block \MW\FreeGift\Block\Adminhtml\Promo\Catalog\Edit\Tab\GiftTab */
 echo $block->getChildHtml();
