--- a/app/code/MW/FreeGift/view/adminhtml/layout/mw_freegift_promo_quote_index.xml
+++ b/app/code/MW/FreeGift/view/adminhtml/layout/mw_freegift_promo_quote_index.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <!--<update handle="mw_freegift_promo_catalog_block"/>-->
+    <update handle="mw_freegift_promo_quote_block"/>
     <body>
         <referenceContainer name="content">
             <block class="MW\FreeGift\Block\Adminhtml\Promo\Quote" name="adminhtml.promo.quote.grid.container"/>
