--- a/app/code/MW/FreeGift/view/adminhtml/layout/mw_freegift_promo_quote_edit.xml
+++ b/app/code/MW/FreeGift/view/adminhtml/layout/mw_freegift_promo_quote_edit.xml
@@ -44,6 +44,20 @@
                     <block class="MW\FreeGift\Block\Adminhtml\Promo\Quote\Edit\Tab\Coupons\Form" name="promo_sales_edit_tab_coupons_form"/>
                     <block class="MW\FreeGift\Block\Adminhtml\Promo\Quote\Edit\Tab\Coupons\Grid" name="promo_sales_edit_tab_coupons_grid"/>
                 </block>
+
+                <block class="MW\FreeGift\Block\Adminhtml\Promo\Quote\Edit\Tab\Social" name="promo_sales_rule_edit_tab_social">
+                    <arguments>
+                        <argument name="config" xsi:type="array">
+                            <item name="label" xsi:type="string" translate="true">Social Sharing</item>
+                            <item name="collapsible" xsi:type="boolean">true</item>
+                            <item name="opened" xsi:type="boolean">true</item>
+                            <item name="sortOrder" xsi:type="number">20</item>
+                            <item name="canShow" xsi:type="boolean">true</item>
+                            <item name="componentType" xsi:type="string">fieldset</item>
+                        </argument>
+                    </arguments>
+                </block>
+
             </referenceBlock>
 
             <uiComponent name="mw_freegift_sales_rule_form"/>
