--- a/app/code/MW/FreeGift/view/frontend/web/css/skin.css
+++ b/app/code/MW/FreeGift/view/frontend/web/css/skin.css
@@ -309,7 +309,8 @@
     position: relative;
 }
 .label-freegift{
-    position: absolute;
+    /*position: absolute;*/
+    float: right;
     top: 0;
     right: 0;
 }
