--- a/app/code/MW/FreeGift/view/frontend/layout/catalog_product_view.xml
+++ b/app/code/MW/FreeGift/view/frontend/layout/catalog_product_view.xml
@@ -13,6 +13,9 @@
         <referenceBlock name="head.additional">
             <block class="MW\FreeGift\Block\Checkout\Top" name="onestepcheckout.head" template="MW_FreeGift::top.phtml"  />
         </referenceBlock>
+        <referenceContainer name="content">
+            <block class="MW\FreeGift\Block\Category\Freeproduct" template="MW_FreeGift::freegift_image.phtml" before="product.info.main" ifconfig="mw_freegift/group_general/active"/>
+        </referenceContainer>
         <referenceContainer name="product.info.main">
             <!--<block class="Magento\Framework\View\Element\Template" template="MW_FreeGift::main.phtml" before="product.price.tier"/>-->
             <block class="MW\FreeGift\Block\Category\Freeproduct" template="MW_FreeGift::catalog_product_view_gift.phtml" before="product.price.tier" ifconfig="mw_freegift/group_general/active"/>
