edit label free gift

--- a/app/code/MW/FreeGift/view/frontend/templates/freegift_image.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/freegift_image.phtml
@@ -1,1 +1,1 @@
-<img src="http://demo.mage-world.com/190s5/skin/frontend/rwd/default/mw_freegift/images/freegift_50.png" alt="" class="label-freegift">
+<img src="<?php echo $this->getViewFileUrl('MW_FreeGift::images/freegift_50.png')?>" alt="" class="label-freegift">
