--- a/app/code/MW/FreeGift/view/frontend/web/css/skin.css
+++ b/app/code/MW/FreeGift/view/frontend/web/css/skin.css
@@ -308,9 +308,9 @@
 .category-products .product-image {
     position: relative;
 }
-.label-freegift{
+    .label-freegift{
     /*position: absolute;*/
-    float: right;
+    /*float: right;*/
     top: 0;
     right: 0;
 }
