--- a/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/free_gift.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/free_gift.phtml
@@ -1,11 +1,24 @@
 <?php
 //echo $block->getName();
-$blockFreeGift= $block->getLayout()->createBlock('MW\FreeGift\Block\Category\Freeproduct');
-$product = $blockFreeGift->getProductGiftData(1225);
-$ProductGiftData = $blockFreeGift->getFreeGiftCatalog($product);
-//\Zend_Debug::dump($ProductGiftData); die();
-$ProductGiftSalesRuleData = $blockFreeGift->getFreeGiftCatalog($product);
-//\Zend_Debug::dump($ProductGiftSalesRuleData); die("aaaaa ss");
+$blockFreeGift= $block->getLayout()->createBlock('MW\FreeGift\Block\Category\FreeGifts');
+//$blockFreeGift = $block;
+//$product = $blockFreeGift->getProductGiftData(1225);
+//$ProductGiftData = $blockFreeGift->getFreeGiftCatalog($product);
+//\Zend_Debug::dump($product->debug()); die();
+//$ProductGiftSalesRuleData = $blockFreeGift->getFreeGiftCatalog($product);
+//\Zend_Debug::dump(count($ProductGiftSalesRuleData)); die("aaaaa ss");
+
+//$ProductGiftData = $block->getFreeGiftCatalog();
+$ProductGiftData = $blockFreeGift->getProductGiftsDeleted();
+//$ProductGiftData = $blockFreeGift->getProductGift();
+//\Zend_Debug::dump(count($ProductGiftData));
+////\Zend_Debug::dump($ProductGiftData);
+//die("aaaaa ss");
+//$aa = debug_backtrace ();
+//\Zend_Debug::dump(debug_backtrace(2),true);
+//die("ss");
+$ProductGiftSalesRuleData = $blockFreeGift->getFreeGiftSalesRule();
+$ProductGiftSalesRuleData = array();
 if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
     ?>
     <div id="mw-fg-slider-cart">
@@ -20,19 +33,19 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
             <ul id="freegift" class="jcarousel-skin-tango mw-fg-slide" >
 
                 <?php foreach($ProductGiftSalesRuleData as $giftData):
-                    $product = $blockFreeGift->getProductGiftData($giftData['rule_gift_ids']);
+                    $product = $blockFreeGift->getProductGiftData($giftData);
                     if($product->isSaleable()) :
                         ?>
 
                         <li class="mw-fg-items">
-                            <a id="stay-target-<?php echo $giftData['rule_id'].'_'.$giftData['rule_gift_ids'].'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
+                            <a id="stay-target-<?php echo $giftData['rule_id'].'_'.$giftData.'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
                                 <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(140,135)->getUrl(); ?>" width="140" height="135" alt="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" />
                             </a>
                             <span style="display: none" class="product-name"><a href="javascript:;"><?php echo $product->getName(); ?></a></span>
-                            <div id="stay-content-<?php echo $giftData['rule_id'].'_'.$giftData['rule_gift_ids'].'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
+                            <div id="stay-content-<?php echo $giftData.'_'.$giftData.'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
                                 <div class="mw-fg-item-options">
                                     <div class="mw-fg-item-option-title">
-                                        <?php echo $blockFreeGift->escapeHtml($giftData['name']); ?>
+                                        <?php echo $blockFreeGift->escapeHtml($giftData); ?>
                                     </div>
                                     <div class="mw-fg-item-option-ct">
                                         <p class="mw-fg-item-name">
@@ -60,8 +73,8 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
                                         data-url-cart="<?php //echo $urlAddToCart?>"
                                         data-ffg-type="coupon"
                                         data-freegift-code="<?php echo $blockFreeGift->getFreegiftCode() ?>"
-                                        data-rule-id='<?php echo $giftData['rule_id'] ?>'
-                                        data-rule-name='<?php echo $giftData['name'] ?>'
+                                        data-rule-id='<?php echo $giftData ?>'
+                                        data-rule-name='<?php echo $giftData ?>'
                                         data-catalog-gift="<?php //echo $giftData['item_id']; //$product->getId() ?>"
                                         data-id="<?php echo $product->getId()?>"
                                         class="button btn-cart action tocart primary <?php //echo $mw_class_rule; ?>"
@@ -77,19 +90,19 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
 
 
                 <?php foreach($ProductGiftData as $giftData):
-                    $product = $blockFreeGift->getProductGiftData($giftData['rule_gift_ids']);
+                    $product = $blockFreeGift->getProductGiftData($giftData);
                     if($product->isSaleable()) :
                         ?>
 
                         <li class="mw-fg-items">
-                            <a id="stay-target-<?php echo $giftData['rule_id'].'_'.$giftData['rule_gift_ids']; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
+                            <a id="stay-target-<?php echo $giftData.'_'.$giftData; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
                                 <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(140,135)->getUrl(); ?>" width="140" height="135" alt="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" />
                             </a>
                             <span style="display: none" class="product-name"><a href="javascript:;"><?php echo $product->getName(); ?></a></span>
-                            <div id="stay-content-<?php echo $giftData['rule_id'].'_'.$giftData['rule_gift_ids']; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
+                            <div id="stay-content-<?php echo $giftData.'_'.$giftData; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
                                 <div class="mw-fg-item-options">
                                     <div class="mw-fg-item-option-title">
-                                        <?php echo $blockFreeGift->escapeHtml($giftData['name']); ?>
+                                        <?php echo $blockFreeGift->escapeHtml($giftData); ?>
                                     </div>
                                     <div class="mw-fg-item-option-ct">
                                         <p class="mw-fg-item-name">
@@ -116,7 +129,7 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
                                         data-type-id="<?php echo $product->getTypeId()?>" href='<?php //echo $urlAddToCart?>'
                                         data-url-cart="<?php //echo $urlAddToCart?>"
                                         data-ffg-type="catalog"
-                                        data-applied-catalog-rule='<?php echo $giftData['rule_id'] ?>'
+                                        data-applied-catalog-rule='<?php echo $giftData ?>'
                                         data-catalog-gift="<?php echo $product->getId(); ?>"
                                         data-id="<?php echo $product->getId()?>"
                                         class="button btn-cart action tocart primary <?php //echo $mw_class_rule; ?>"
