--- a/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/quote.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/quote.phtml
@@ -1,34 +1,37 @@
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="1500">
-        <!-- Indicators -->
-        <ol class="carousel-indicators" >
-<!--            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
-<!--            <li data-target="#myCarousel" data-slide-to="1"></li>-->
-<!--            <li data-target="#myCarousel" data-slide-to="2"></li>-->
-        </ol>
+<?php
+//$blockFreeGift= $block->getLayout()->createBlock('MW\FreeGift\Block\Promotionbanner');
+$allActiveRules = $block->getAllActiveRules();
+//\Zend_Debug::dump(count($allActiveRules)); die("hhhhhhhh");
+if(sizeof($allActiveRules)):?>
+    <?php
+    $arrShowin = array(1,3);
+    $showin = $this->helper('MW\FreeGift\Helper\Data')->getStoreConfig('mw_freegift/group_general/showfreegiftpromotion');
+    ?>
+    <div class="freegift_rules_container">
+        <?php
+        if(in_array($showin,$arrShowin)){
+            $listDescription = array();
+            foreach($allActiveRules as $rule):
+                if($rule->getData('promotion_message') != ""){
+                    $listDescription[] = $rule->getData('promotion_message');
+                }
+            endforeach;
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" style="height: 100px; background-color: #eff5ea;">
-
-            <div class="item active" >
-<!--                <img src="--><?php //echo $this->getViewFileUrl('MW_FreeGift::images/tree.jpg')?><!--" alt="Message" style="width:100%;">-->
-                <div class="carousel-caption" style="color: #3D6611; position: initial;">
-                    <h3>Spend more $300 to get 3 free gift</h3>
+            if(count($listDescription)>0){
+                ?>
+                <script type="text/javascript">
+                    hasPromotionMessage = true;
+                </script>
+                <div id="freegift_rules" class="mw_jcarousel">
+                    <ul>
+                        <?php foreach($listDescription as $description):?>
+                            <li><?php echo $description;?></li>
+                        <?php endforeach;?>
+                    </ul>
                 </div>
-            </div>
-
-            <div class="item" >
-<!--                <img src="--><?php //echo $this->getViewFileUrl('MW_FreeGift::images/tree.jpg')?><!--" alt="Message" style="width:100%;">-->
-                <div class="carousel-caption" style="color: #3D6611; position: initial;">
-                    <h3>Spend more $400 to get 4 free gift</h3>
-                </div>
-            </div>
-            <div class="item" >
-<!--                <img src="--><?php //echo $this->getViewFileUrl('MW_FreeGift::images/tree.jpg')?><!--" alt="Message" style="width:100%;">-->
-                <div class="carousel-caption" style="color: #3D6611; position: initial;">
-                    <h3>Spend more $600 to get 6 free gift</h3>
-
-                </div>
-            </div>
-
-        </div>
+                <?php
+            }
+        }
+        ?>
     </div>
+<?php endif;?>
