--- a/app/code/MW/FreeGift/view/frontend/templates/catalog_product_view_gift.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/catalog_product_view_gift.phtml
@@ -21,15 +21,15 @@ if(count($ProductGiftData) > 0):
             <div class="freegift_catalog_container clearer control">
                 <ul id="freegift">
                     <?php foreach($ProductGiftData as $giftData):
-                        if($giftData['gift_id'] != ""):
-                            $product = $block->getProductGiftData($giftData['gift_id']);
+                        if($giftData['rule_gift_ids'] != ""):
+                            $product = $block->getProductGiftData($giftData['rule_gift_ids']);
                             if($product->isSaleable()) :
                                 ?>
                                 <li class="mw-fg-items">
-                                    <a id="stay-target-<?php echo $giftData['rule_id'].'_'.$block->getCurrentProduct()->getId().'_'.$giftData['gift_id']; ?>" href="<?php echo $product->getProductUrl(); ?>" title="<?php echo $block->escapeHtml($product->getName()); ?>" class="product-image">
+                                    <a id="stay-target-<?php echo $giftData['rule_id'].'_'.$block->getCurrentProduct()->getId().'_'.$giftData['rule_gift_ids']; ?>" href="<?php echo $product->getProductUrl(); ?>" title="<?php echo $block->escapeHtml($product->getName()); ?>" class="product-image">
                                         <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(75,75)->getUrl(); ?>" alt="" height="75" width="75">
                                     </a>
-                                    <div style="display: none;" id="stay-content-<?php echo $giftData['rule_id'].'_'.$block->getCurrentProduct()->getId().'_'.$giftData['gift_id']; ?>" class="mw-fg-item">
+                                    <div style="display: none;" id="stay-content-<?php echo $giftData['rule_id'].'_'.$block->getCurrentProduct()->getId().'_'.$giftData['rule_gift_ids']; ?>" class="mw-fg-item">
                                         <div class="mw-fg-item-options">
                                             <div class="mw-fg-item-option-title"><?php echo $giftData['name'] ?></div>
                                             <div class="mw-fg-item-option-ct">
