--- a/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/free_gift.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/free_gift.phtml
@@ -1,23 +1,9 @@
 <?php
-//echo $block->getName();
 $blockFreeGift= $block->getLayout()->createBlock('MW\FreeGift\Block\Category\FreeGifts');
-//$blockFreeGift = $block;
-//$product = $blockFreeGift->getProductGiftData(1225);
-//$ProductGiftData = $blockFreeGift->getFreeGiftCatalog($product);
-//\Zend_Debug::dump($product->debug()); die();
-//$ProductGiftSalesRuleData = $blockFreeGift->getFreeGiftCatalog($product);
-//\Zend_Debug::dump(count($ProductGiftSalesRuleData)); die("aaaaa ss");
 
-//$ProductGiftData = $block->getFreeGiftCatalog();
 $ProductGiftData = $blockFreeGift->getProductGiftsDeleted();
-//$ProductGiftData = $blockFreeGift->getProductGift();
-//\Zend_Debug::dump(count($ProductGiftData));
-////\Zend_Debug::dump($ProductGiftData);
-//die("aaaaa ss");
-//$aa = debug_backtrace ();
-//\Zend_Debug::dump(debug_backtrace(2),true);
-//die("ss");
-$ProductGiftSalesRuleData = $blockFreeGift->getFreeGiftSalesRule();
+
+$ProductGiftSalesRuleData = $blockFreeGift->getFreeGiftSalesRule(); //cho Shopping cart
 $ProductGiftSalesRuleData = array();
 if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
     ?>
@@ -90,19 +76,19 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
 
 
                 <?php foreach($ProductGiftData as $giftData):
-                    $product = $blockFreeGift->getProductGiftData($giftData);
+                    $product = $blockFreeGift->getProductGiftData($giftData['product_gift_id']);
                     if($product->isSaleable()) :
                         ?>
 
                         <li class="mw-fg-items">
-                            <a id="stay-target-<?php echo $giftData.'_'.$giftData; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
+                            <a id="stay-target-<?php echo $giftData['product_gift_id'].'_'.$giftData['product_gift_id']; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
                                 <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(140,135)->getUrl(); ?>" width="140" height="135" alt="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" />
                             </a>
                             <span style="display: none" class="product-name"><a href="javascript:;"><?php echo $product->getName(); ?></a></span>
-                            <div id="stay-content-<?php echo $giftData.'_'.$giftData; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
+                            <div id="stay-content-<?php echo $giftData['product_gift_id'].'_'.$giftData['product_gift_id']; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
                                 <div class="mw-fg-item-options">
                                     <div class="mw-fg-item-option-title">
-                                        <?php echo $blockFreeGift->escapeHtml($giftData); ?>
+                                        <?php echo $blockFreeGift->escapeHtml($giftData['product_gift_id']); ?>
                                     </div>
                                     <div class="mw-fg-item-option-ct">
                                         <p class="mw-fg-item-name">
@@ -121,21 +107,22 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
                                     <div class="mw-hidden-product-image" data-product-image="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(265, 265)->getUrl()?>"></div>
                                     <div class="mw-hidden-product-has-options" data-has-options="<?php echo ($product->getOptions() ? "1" : "0")?>"></div>
                                     <div class="mw-hidden-product-type" data-product-type-id="<?php echo $product->getTypeId()?>"></div>
-                                    <button
-                                        id="btn<?php echo $product->getId(); ?>"
-                                        type="button"
-                                        title="<?php echo 'Add to Cart'; ?>"
-                                        data-has-options="<?php echo ($product->getOptions() ? "1" : "0")?>"
-                                        data-type-id="<?php echo $product->getTypeId()?>" href='<?php //echo $urlAddToCart?>'
-                                        data-url-cart="<?php //echo $urlAddToCart?>"
-                                        data-ffg-type="catalog"
-                                        data-applied-catalog-rule='<?php echo $giftData ?>'
-                                        data-catalog-gift="<?php echo $product->getId(); ?>"
-                                        data-id="<?php echo $product->getId()?>"
-                                        class="button btn-cart action tocart primary <?php //echo $mw_class_rule; ?>"
-                                        data-url="<?php //echo $urlAddToCart; ?>">
-                                        <span><span><?php echo 'Add to Cart'; ?></span></span>
-                                    </button>
+                                    <?php $postParams = "";
+
+                                    $addToCartUrl =  $blockFreeGift->getAddToCartUrl($product);
+                                    ?>
+                                    <form data-role="tocart-form" data-product-sku="<?=  /* @NoEscape */ $product->getSku() ?>" action="<?php echo $addToCartUrl ?>" method="post">
+                                        <input type="hidden" name="qty" value="1">
+                                        <input type="hidden" name="freegift_parent_key" value="<?php echo $giftData['freegift_parent_key']; ?>">
+                                        <input type="hidden" name="rule_name" value="<?php echo $giftData['rule_name']; ?>">
+                                        <input type="hidden" name="rule_id" value="<?php echo $giftData['rule_id']; ?>">
+                                        <?= $block->getBlockHtml('formkey') ?>
+                                        <button type="submit"
+                                                title="<?= $block->escapeHtml(__('Add to Cart')) ?>"
+                                                class="action tocart primary">
+                                            <span><?= /* @escapeNotVerified */ __('Add to Cart') ?></span>
+                                        </button>
+                                    </form>
                                     </p>
                                 </div>
                             </div>
