--- a/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/free_gift.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/free_gift.phtml
@@ -3,8 +3,8 @@ $blockFreeGift= $block->getLayout()->createBlock('MW\FreeGift\Block\Category\Fre
 
 $ProductGiftData = $blockFreeGift->getProductGiftsDeleted();
 
-$ProductGiftSalesRuleData = $blockFreeGift->getFreeGiftSalesRule(); //cho Shopping cart
-$ProductGiftSalesRuleData = array();
+$ProductGiftSalesRuleData = $blockFreeGift->getFreeGiftSalesRuleAvailable(); //cho Shopping cart
+
 if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
     ?>
     <div id="mw-fg-slider-cart">
@@ -19,19 +19,19 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
             <ul id="freegift" class="jcarousel-skin-tango mw-fg-slide" >
 
                 <?php foreach($ProductGiftSalesRuleData as $giftData):
-                    $product = $blockFreeGift->getProductGiftData($giftData);
+                    $product = $blockFreeGift->getProductGiftData($giftData['rule_gift_ids']);
                     if($product->isSaleable()) :
                         ?>
 
                         <li class="mw-fg-items">
-                            <a id="stay-target-<?php echo $giftData['rule_id'].'_'.$giftData.'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
+                            <a id="stay-target-<?php echo $giftData['rule_id'].'_'.$giftData['rule_id'].'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
                                 <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(140,135)->getUrl(); ?>" width="140" height="135" alt="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" />
                             </a>
                             <span style="display: none" class="product-name"><a href="javascript:;"><?php echo $product->getName(); ?></a></span>
-                            <div id="stay-content-<?php echo $giftData.'_'.$giftData.'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
+                            <div id="stay-content-<?php echo $giftData['rule_id'].'_'.$giftData['rule_id'].'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
                                 <div class="mw-fg-item-options">
                                     <div class="mw-fg-item-option-title">
-                                        <?php echo $blockFreeGift->escapeHtml($giftData); ?>
+                                        <?php echo $blockFreeGift->escapeHtml($giftData['rule_name']); ?>
                                     </div>
                                     <div class="mw-fg-item-option-ct">
                                         <p class="mw-fg-item-name">
@@ -59,8 +59,8 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
                                         data-url-cart="<?php //echo $urlAddToCart?>"
                                         data-ffg-type="coupon"
                                         data-freegift-code="<?php echo $blockFreeGift->getFreegiftCode() ?>"
-                                        data-rule-id='<?php echo $giftData ?>'
-                                        data-rule-name='<?php echo $giftData ?>'
+                                        data-rule-id='<?php echo $giftData['rule_id'] ?>'
+                                        data-rule-name='<?php echo $giftData['rule_name'] ?>'
                                         data-catalog-gift="<?php //echo $giftData['item_id']; //$product->getId() ?>"
                                         data-id="<?php echo $product->getId()?>"
                                         class="button btn-cart action tocart primary <?php //echo $mw_class_rule; ?>"
